...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_app_title_welcome"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/maths_for_kids" />

    <Button
        android:id="@+id/button_start_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_username_welcome"
        app:layout_constraintVertical_bias="0.28" />

    <EditText
        android:id="@+id/edit_text_username_welcome"
        android:layout_width="219dp"
        android:layout_height="52dp"
...
